update daily cases

--- a/00_load_data_county_level.ipynb
+++ b/00_load_data_county_level.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Tiffany/My Documents/Research/Yu/covid-19/covid-19-geographic-risk-prediction/functions/merge_data.py:35: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n",
+      "/accounts/projects/vision/chandan/covid-19-geographic-risk-prediction/functions/merge_data.py:35: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n",
       "  diabetes = pd.read_csv(diabetes, skiprows = 2, skipfooter = 1)\n"
      ]
     }
@@ -29,8 +29,8 @@
     "from os.path import join as oj\n",
     "\n",
     "ahrf_data = 'data/hrsa/data_AHRF_2018-2019/processed/df_renamed.pkl'\n",
-    "usafacts_data_cases = 'data/usafacts/confirmed_cases_mar22.csv'\n",
-    "usafacts_data_deaths = 'data/usafacts/deaths_mar22.csv'\n",
+    "usafacts_data_cases = 'data/usafacts/confirmed_cases_mar23.csv'\n",
+    "usafacts_data_deaths = 'data/usafacts/deaths_mar23.csv'\n",
     "diabetes = 'data/diabetes/DiabetesAtlasCountyData.csv'\n",
     "voting = 'data/voting/county_voting_processed.pkl'\n",
     "icu = 'data/medicare/icu_county.csv'\n",
@@ -47,6 +47,13 @@
     "                           stroke_data=stroke_data,\n",
     "                           diabetes=diabetes) # also cleans usafacts data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
