factor out loading

--- a/00_load_data_county_level.ipynb
+++ b/00_load_data_county_level.ipynb
@@ -2,7 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -12,48 +31,20 @@
       "/accounts/projects/vision/chandan/covid-19-geographic-risk-prediction/functions/merge_data.py:35: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n",
       "  diabetes = pd.read_csv(diabetes, skiprows = 2, skipfooter = 1)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1126, 7302)\n"
+     ]
     }
    ],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "import numpy as np\n",
-    "import scipy as sp\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.dates as mdates\n",
-    "import matplotlib.cbook as cbook\n",
-    "from functions import merge_data\n",
-    "from functions import load_medicare_data\n",
-    "from functions import load_respiratory_disease_data\n",
-    "from os.path import join as oj\n",
-    "\n",
-    "ahrf_data = 'data/hrsa/data_AHRF_2018-2019/processed/df_renamed.pkl'\n",
-    "usafacts_data_cases = 'data/usafacts/confirmed_cases_mar23.csv'\n",
-    "usafacts_data_deaths = 'data/usafacts/deaths_mar23.csv'\n",
-    "diabetes = 'data/diabetes/DiabetesAtlasCountyData.csv'\n",
-    "voting = 'data/voting/county_voting_processed.pkl'\n",
-    "icu = 'data/medicare/icu_county.csv'\n",
-    "heart_disease_data = \"data/cardiovascular_disease/heart_disease_mortality_data.csv\"\n",
-    "stroke_data = \"data/cardiovascular_disease/stroke_mortality_data.csv\"\n",
-    "df = merge_data.merge_data(ahrf_data=ahrf_data, \n",
-    "                           usafacts_data_cases=usafacts_data_cases,\n",
-    "                           usafacts_data_deaths=usafacts_data_deaths,\n",
-    "                           medicare_group=\"All Beneficiaries\",\n",
-    "                           voting=voting,\n",
-    "                           icu=icu,\n",
-    "                           resp_group=\"Chronic respiratory diseases\",\n",
-    "                           heart_disease_data=heart_disease_data,\n",
-    "                           stroke_data=stroke_data,\n",
-    "                           diabetes=diabetes) # also cleans usafacts data"
+    "from load_data import load_county_level\n",
+    "df = load_county_level()\n",
+    "print(df.shape)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
