fix county name issue

--- a/03_merge_hospital_and_county_data.ipynb
+++ b/03_merge_hospital_and_county_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,8 @@
     "from functions import load_respiratory_disease_data\n",
     "from os.path import join as oj\n",
     "import math\n",
-    "import re"
+    "import re\n",
+    "import joblib"
    ]
   },
   {
@@ -40,37 +41,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "icu = pd.read_csv('data/icu/icu_county.csv')\n",
     "icu['cnty_name'] = icu.apply(lambda x: re.sub('[^a-zA-Z]+', '', x['cnty_name']).lower(), axis=1)\n",
-    "county_to_fips = dict(zip(icu['cnty_name'], icu['cnty_fips']))\n",
+    "county_to_fips = dict(zip(zip(icu['cnty_name'], icu['st']), icu['cnty_fips']))\n",
     "hospital_level_info_merged = pd.read_csv(\"data/hospital_level_info/03_hospital_level_info_merged.csv\")\n",
-    "def map_county_to_fips(county_name):\n",
+    "def map_county_to_fips(county_name, st):\n",
     "    if type(county_name) is str:\n",
     "        name = re.sub('[^a-zA-Z]+', '', county_name).lower()\n",
-    "        if name in county_to_fips:\n",
-    "            return county_to_fips[name]\n",
+    "        if (name, st) in county_to_fips:\n",
+    "            return county_to_fips[(name, st)]\n",
     "    return np.nan\n",
     "    \n",
-    "hospital_level_info_merged['countyFIPS'] = hospital_level_info_merged.apply(lambda x: map_county_to_fips(x['County Name_y']), \n",
+    "hospital_level_info_merged['countyFIPS'] = hospital_level_info_merged.apply(lambda x: map_county_to_fips(x['County Name_y'], x['State_x']), \n",
     "                                                                            axis=1).astype('Int64')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1530"
+       "2445"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,27 +82,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       48225\n",
-       "1       54051\n",
-       "2       47097\n",
-       "3       28031\n",
-       "4        1041\n",
-       "        ...  \n",
-       "7138     <NA>\n",
-       "7139     <NA>\n",
-       "7140     <NA>\n",
-       "7141     <NA>\n",
-       "7142     <NA>\n",
+       "0       1069\n",
+       "1       1095\n",
+       "2       1077\n",
+       "3       1039\n",
+       "4       1041\n",
+       "        ... \n",
+       "7138    <NA>\n",
+       "7139    <NA>\n",
+       "7140    <NA>\n",
+       "7141    <NA>\n",
+       "7142    <NA>\n",
        "Name: countyFIPS, Length: 7143, dtype: Int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
