--- a/01_eda_county_level.ipynb
+++ b/01_eda_county_level.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -30,11 +30,10 @@
       "       'SecondaryEntityOfFile', 'DateofFile', 'DateofCreation', 'FileLength',\n",
       "       'StateName', 'StateNameAbbreviation', 'CountyName',\n",
       "       ...\n",
-      "       'condition_Psychotic Disorders', 'condition_Stroke',\n",
-      "       'Diabetes Percentage', 'Respiratory Mortality', 'dem_to_rep_ratio',\n",
-      "       'hospitals', 'icu_beds', 'Heart Disease Mortality', 'Stroke Mortality',\n",
-      "       'FracMale2017'],\n",
-      "      dtype='object', length=7303)\n"
+      "       'condition_Stroke', 'DiabetesPercentage', 'Respiratory Mortality',\n",
+      "       'dem_to_rep_ratio', '#Hospitals', '#ICU_beds', 'HeartDiseaseMortality',\n",
+      "       'StrokeMortality', 'FracMale2017', '#FTEHospitalTotal2017'],\n",
+      "      dtype='object', length=7304)\n"
      ]
     }
    ],
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +187,7 @@
        "694                   4              1900    New York       Nassau"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,16 +232,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['#HospW/LungTransplantShortTermGeneralHospitals2017']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sorted([k for k in df.keys()])"
+    "sorted(list([k for k in df.keys() if 'lung' in k.lower()]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,19 +260,22 @@
     "                'PopTotalMale2017', 'PopTotalFemale2017', 'FracMale2017',\n",
     "                'PopulationEstimate65+2017',\n",
     "                'PopulationDensityperSqMile2010',\n",
-    "                'MedianAge2010', 'MedianAge,Male2010', 'MedianAge,Female2010',\n",
-    "               ]\n",
-    "\n",
-    "# income vars\n",
+    "                'MedianAge2010', 'MedianAge,Male2010', 'MedianAge,Female2010']\n",
     "\n",
     "# hospital vars\n",
-    "hospitals = ['#FTETotalHospitalPersonnelShortTermGeneralHospitals2017',  \"TotalM.D.'s,TotNon-FedandFed2017\"]\n",
+    "hospitals_hrsa = ['#FTEHospitalTotal2017', \"TotalM.D.'s,TotNon-FedandFed2017\", '#HospParticipatinginNetwork2017']\n",
+    "hospitals_misc = [\"#Hospitals\", \"#ICU_beds\"]\n",
+    "hospitals = hospitals_hrsa + hospitals_misc\n",
     "\n",
     "# comorbidity vars\n",
-    "comorbidity_hrsa = [ '#EligibleforMedicare2018',  'MedicareEnrollment,AgedTot2017', \n",
-    "               '3-YrDiabetes2015-17']\n",
+    "comorbidity_hrsa = [ '#EligibleforMedicare2018',  'MedicareEnrollment,AgedTot2017', '3-YrDiabetes2015-17']\n",
+    "comorbidity_misc = [\"DiabetesPercentage\", \"HeartDiseaseMortality\", \"StrokeMortality\"]\n",
+    "comorbidity = comorbidity_hrsa + comorbidity_misc\n",
     "\n",
+    "# political leanings (ratio of democrat : republican votes in 2016 presidential election)\n",
     "political = ['dem_to_rep_ratio']\n",
+    "\n",
+    "\n",
     "\n",
     "important_vars = demographics + comorbidity + hospitals + political"
    ]
