fix county name issue

--- a/03_merge_hospital_and_county_data.ipynb
+++ b/03_merge_hospital_and_county_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -41,19 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "icu = pd.read_csv('data/icu/icu_county.csv')\n",
-    "icu['cnty_name'] = icu.apply(lambda x: re.sub('[^a-zA-Z]+', '', x['cnty_name']).lower(), axis=1)\n",
-    "county_to_fips = dict(zip(zip(icu['cnty_name'], icu['st']), icu['cnty_fips']))\n",
+    "#icu['cnty_name'] = icu.apply(lambda x: re.sub('[^a-zA-Z]+', '', x['cnty_name']).lower(), axis=1)\n",
+    "hospitals = pd.read_csv(\"data/hospital_level_info/02_hospital_info.csv\")\n",
+    "county_to_fips = dict(zip(zip(hospitals['COUNTY'], hospitals['STATE']), hospitals['COUNTYFIPS']))\n",
     "hospital_level_info_merged = pd.read_csv(\"data/hospital_level_info/03_hospital_level_info_merged.csv\")\n",
-    "def map_county_to_fips(county_name, st):\n",
-    "    if type(county_name) is str:\n",
-    "        name = re.sub('[^a-zA-Z]+', '', county_name).lower()\n",
-    "        if (name, st) in county_to_fips:\n",
-    "            return county_to_fips[(name, st)]\n",
+    "def map_county_to_fips(name, st):\n",
+    "    if type(name) is str:\n",
+    "        #name = re.sub('[^a-zA-Z]+', '', county_name).lower()\n",
+    "        if (name, st) in county_to_fips and county_to_fips[(name, st)] != \"NOT AVAILABLE\":\n",
+    "            return int(county_to_fips[(name, st)])\n",
     "    return np.nan\n",
     "    \n",
     "hospital_level_info_merged['countyFIPS'] = hospital_level_info_merged.apply(lambda x: map_county_to_fips(x['County Name_y'], x['State_x']), \n",
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2445"
+       "2402"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "Name: countyFIPS, Length: 7143, dtype: Int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": []
