add counties without confirmed cases

--- a/03_merge_hospital_and_county_data.ipynb
+++ b/03_merge_hospital_and_county_data.ipynb
@@ -82,41 +82,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hospital_level_info_merged['countyFIPS'] = hospital_level_info_merged['countyFIPS'].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading county level data...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/accounts/grad/xsli/covid-19-geographic-risk-prediction/functions/merge_data.py:40: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n",
+      "  diabetes = pd.read_csv(diabetes, skiprows = 2, skipfooter = 1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ks Index(['countyFIPS', 'Respiratory Mortality'], dtype='object')\n",
+      "(3114, 7305)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from load_data import load_county_level\n",
+    "df = load_county_level()\n",
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "county_level = df\n",
+    "hospital_county_merged = hospital_level_info_merged.merge(county_level, how='left', on='countyFIPS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 66.  20.  48.  13.   0.  nan 471.  nan  32. 471.]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0       1069\n",
-       "1       1095\n",
-       "2       1077\n",
-       "3       1039\n",
-       "4       1041\n",
-       "        ... \n",
-       "7138    <NA>\n",
-       "7139    <NA>\n",
-       "7140    <NA>\n",
-       "7141    <NA>\n",
-       "7142    <NA>\n",
-       "Name: countyFIPS, Length: 7143, dtype: Int64"
+       "array([1069., 1095., 1077., 1039., 1041.,   nan, 1073.,   nan, 1117.,\n",
+       "       1073.])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hospital_level_info_merged['countyFIPS']"
+    "print(hospital_county_merged['#ICU_beds'].values[:10])\n",
+    "hospital_county_merged['countyFIPS'].values[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'CMS Certification Number', 'Facility Name_x',\n",
+       "       'Street Address_x', 'City_x', 'State_x', 'ZIP', 'System Affiliation',\n",
+       "       'Type of Facility', 'Total Employees',\n",
+       "       ...\n",
+       "       'DiabetesPercentage', 'Respiratory Mortality', 'dem_to_rep_ratio',\n",
+       "       '#Hospitals', '#ICU_beds', 'HeartDiseaseMortality', 'StrokeMortality',\n",
+       "       'Smokers_Percentage', 'FracMale2017', '#FTEHospitalTotal2017'],\n",
+       "      dtype='object', length=7491)"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hospital_county_merged.keys()"
+   ]
   }
  ],
  "metadata": {
